[gd_scene load_steps=2 format=3 uid="uid://dq2ixxdtjx0hr"]

[ext_resource type="Script" uid="uid://d6o305r45233" path="res://scripts/HUD.gd" id="1_wkx8k"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_wkx8k")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="LevelLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Level: 1"

[node name="SlingsLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Slings: 0"

[node name="OrbsLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Orbs: 0/0"

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MessageLabel" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Level Complete!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true
